# apkxray

./: .gitignore  LICENSE  README.md  pyproject.toml
apkxray/: __main__.py  analyzer.py  deeplinks.py  endpoints.py  netsec.py  sdks.py  secrets.py  unpacker.py
tests/: test_deeplinks.py  test_endpoints.py  test_netsec.py  test_sdks.py  test_unpacker.py
