[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apkxray"
version = "0.1.0"
description = "X-ray Android APKs for secrets, permissions, endpoints, and security issues"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Chaosuu"}]
requires-python = ">=3.9"
dependencies = ["androguard>=4.0"]
keywords = [
    "apk", "android", "security", "secrets", "reverse-engineering",
    "bug-bounty", "mobile-security", "static-analysis", "appsec",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
apkxray = "apkxray.__main__:main"

[project.urls]
Homepage      = "https://github.com/NotChaosuu/apkxray"
Repository    = "https://github.com/NotChaosuu/apkxray"
Issues        = "https://github.com/NotChaosuu/apkxray/issues"
Telegram      = "https://t.me/chaosuudev"
